header title was wrappign on small mobile devices. fixed it by making it smaller.

--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,6 @@ body{
 }
 
 #hamburger-button{
-  top: 23px; /* looks best to match masthead text*/
-  right: 20px;
-  /*position: fixed;*/  /*wanting the parent to be fixed not just this*/
   z-index: 100;
   display: none;
   background-color: transparent;
@@ -182,10 +179,11 @@ div.presentation_summary{margin-bottom:6em}
 
 
 @media screen and (max-width: 800px){
-  #masthead a, h1{
-    font-size: 2rem;
-    margin-top: 20px;
-  }
+  h1#masthead a {
+    font-size: 30px;
+    padding-left: 5px;
+    margin: 20px 0px 10px 0px;
+}
   img {
     display: block;
   }
